# cpu-monitoring

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  monitor.cpp  monitor.h  program.pro
include/: mainwindow.h  monitor.h
src/: main.cpp  mainwindow.cpp  monitor.cpp
